# Manipulator-Robot

./: README.md
Errores/Error en CMake (Drake)/: CMakeLists.txt  package.xml
Errores/Error en CMake (Drake)/include/six_dof_manipulator_description/: arm_dynamics.hpp
Errores/Error en CMake (Drake)/launch/: spawn_manipulator.launch.py
Errores/Error en CMake (Drake)/src/: arm_dynamics.cpp  drake_dynamics_node.cpp
Errores/Error en CMake (Drake)/urdf/: 6dof_manipulator.xacro
Manipulador Gazebo/Modelo URDF en Gazebo/: CMakeLists.txt
Manipulador Gazebo/Obtencion Matrices/: CMakeLists.txt  package.xml  test_dynamics.py
Manipulador Gazebo/Obtencion Matrices/launch/: spawn_manipulator.launch.py
Manipulador Gazebo/Obtencion Matrices/src/: dynamics_printer.py
Manipulador Gazebo/Obtencion Matrices/urdf/: 6dof_manipulator.xacro
UMA/P1/: cartesian_planning.m  generate_smooth_path.m  qpinter.m
UMA/P5/: P5.slx  Params.m
